--- a/HS2231A5/HS2231A5.csproj
+++ b/HS2231A5/HS2231A5.csproj
@@ -189,7 +189,11 @@
     <Compile Include="Controllers\LoadDataController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\Manager.cs" />
+    <Compile Include="Data\Actor.cs" />
+    <Compile Include="Data\Episode.cs" />
+    <Compile Include="Data\Genre.cs" />
     <Compile Include="Data\RoleClaim.cs" />
+    <Compile Include="Data\Show.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -216,6 +220,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Data\EntityRelations.cd" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Readme.txt" />
     <Content Include="Scripts\bootstrap.js" />
