Fixed the headers and footers

--- a/HS2231A5/HS2231A6.csproj
+++ b/HS2231A5/HS2231A6.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Microsoft.Net.Compilers.4.2.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.4.2.0\build\Microsoft.Net.Compilers.props')" />
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\build\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
-  <Import Project="..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.2.1.0\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,6 +54,12 @@
     <Reference Include="AutoMapper, Version=6.0.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.4\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
@@ -157,12 +164,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -194,6 +195,7 @@
     <Compile Include="Controllers\Manager.cs" />
     <Compile Include="Controllers\ShowController.cs" />
     <Compile Include="Data\Actor.cs" />
+    <Compile Include="Data\ActorMediaItem.cs" />
     <Compile Include="Data\Episode.cs" />
     <Compile Include="Data\Genre.cs" />
     <Compile Include="Data\RoleClaim.cs" />
@@ -201,7 +203,33 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308040033333_InitialCreate.cs" />
+    <Compile Include="Migrations\202308040033333_InitialCreate.designer.cs">
+      <DependentUpon>202308040033333_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308060500065_initial.cs" />
+    <Compile Include="Migrations\202308060500065_initial.designer.cs">
+      <DependentUpon>202308060500065_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308181011282_assignment_6.cs" />
+    <Compile Include="Migrations\202308181011282_assignment_6.designer.cs">
+      <DependentUpon>202308181011282_assignment_6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308181146494_videoMediaItem_Episode.cs" />
+    <Compile Include="Migrations\202308181146494_videoMediaItem_Episode.designer.cs">
+      <DependentUpon>202308181146494_videoMediaItem_Episode.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308181453129_ActorMediaItems.cs" />
+    <Compile Include="Migrations\202308181453129_ActorMediaItems.designer.cs">
+      <DependentUpon>202308181453129_ActorMediaItems.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202308190303289_Final-deployment.cs" />
+    <Compile Include="Migrations\202308190303289_Final-deployment.designer.cs">
+      <DependentUpon>202308190303289_Final-deployment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\ActorMediaItemViewModel.cs" />
     <Compile Include="Models\ActorViewModel.cs" />
     <Compile Include="Models\EpisodeViewModel.cs" />
     <Compile Include="Models\GenreViewModel.cs" />
@@ -229,6 +257,8 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Data\EntityRelations.cd" />
+    <None Include="Properties\PublishProfiles\hsehjal-wa-web524-a5 - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\hsehjal-wa-web524-a6 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Readme.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -292,15 +322,41 @@
     <Content Include="Views\Episode\Index.cshtml" />
     <Content Include="Views\Actor\Details.cshtml" />
     <Content Include="Views\Actor\Create.cshtml" />
+    <Content Include="Views\Show\Details.cshtml" />
+    <Content Include="Views\Actor\AddShow.cshtml" />
+    <Content Include="Views\Episode\Details.cshtml" />
+    <Content Include="Views\Show\AddEpisode.cshtml" />
+    <Content Include="Views\Actor\AddMediaItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Video\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.1.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202308040033333_InitialCreate.resx">
+      <DependentUpon>202308040033333_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308060500065_initial.resx">
+      <DependentUpon>202308060500065_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308181011282_assignment_6.resx">
+      <DependentUpon>202308181011282_assignment_6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308181146494_videoMediaItem_Episode.resx">
+      <DependentUpon>202308181146494_videoMediaItem_Episode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308181453129_ActorMediaItems.resx">
+      <DependentUpon>202308181453129_ActorMediaItems.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308190303289_Final-deployment.resx">
+      <DependentUpon>202308190303289_Final-deployment.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -330,6 +386,15 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.props'))" />
+    <Error Condition="!Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\EntityFramework.6.4.4\build\EntityFramework.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.4.2.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.4.2.0\build\Microsoft.Net.Compilers.props'))" />
+  </Target>
+  <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.targets" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
